force-app/main/default/objects/OI_Event__c/OI_Event__c.object-meta.xml
<CustomObject>
    <label>OI Event</label>
    <nameField>
        <displayFormat>EV{00000000}</displayFormat>
        <label>OI Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OI Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>