force-app/main/default/objects/OI_Event__c/fields/Event_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Event_Sequence__c</fullName>
    <label>Event Sequence</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>