force-app/main/default/objects/OI_Event__c/fields/event_type_number__c.field-meta.xml
<CustomField>
    <fullName>event_type_number__c</fullName>
    <label>Event Type Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>