force-app/main/default/objects/OI_Event__c/fields/Flight_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Flight_Duration_Minutes__c</fullName>
    <label>Flight Duration Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>