force-app/main/default/objects/OI_Event__c/fields/Flight_Time__c.field-meta.xml
<CustomField>
    <fullName>Flight_Time__c</fullName>
    <label>Flight Start Time Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>