force-app/main/default/objects/OI_Event__c/fields/images__c.field-meta.xml
<CustomField>
    <fullName>images__c</fullName>
    <label>Images</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>