force-app/main/default/objects/OI_Event__c/fields/information__c.field-meta.xml
<CustomField>
    <fullName>information__c</fullName>
    <label>Information</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>