force-app/main/default/objects/OI_Event__c/fields/Is_arrival__c.field-meta.xml
<CustomField>
    <fullName>Is_arrival__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is arrival?</label>
    <type>Checkbox</type>
</CustomField>