force-app/main/default/objects/OI_Event__c/fields/order_itinerary__c.field-meta.xml
<CustomField>
    <fullName>order_itinerary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Itinerary</label>
    <referenceTo>Order_Itinerary__c</referenceTo>
    <relationshipLabel>OI Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>