force-app/main/default/objects/OI_Event__c/fields/segment_id__c.field-meta.xml
<CustomField>
    <fullName>segment_id__c</fullName>
    <label>Segment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>