force-app/main/default/objects/OI_Event__c/fields/segment_identifier__c.field-meta.xml
<CustomField>
    <fullName>segment_identifier__c</fullName>
    <label>Segment Identifier</label>
    <length>150</length>
    <type>Text</type>
</CustomField>