force-app/main/default/objects/OI_Event__c/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <label>Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>