force-app/main/default/objects/OI_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>order_itinerary__c</columns>
    <columns>event_type__c</columns>
    <columns>title__c</columns>
    <columns>information__c</columns>
    <columns>segment_id__c</columns>
    <columns>event_lookup__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>